# Pmotion

./: CMakeLists.txt  cases.h  cinema.cpp  eulerScheme.h  forces.cpp  forces.h  linearInterp.h  placePeopleInZenith.cpp  placePeopleInZenith.h  polygonalWall.h  reunion.cpp  totalForces.h  utilities.cpp  utilities.h  zenith.cpp
FMM/: CMakeLists.txt  FMM.cpp  FMM.h  grid.h  myTypes.h  rootFinding.cpp  rootFinding.h
inputs/: ZenithWallTop.txt  zenithTopRmin.txt  zenith_ext.txt  zenith_front_walls.txt  zenith_up_doors.txt
postproc/: cinemaImages.py  roomImages.py  zenithImages.py
